# Educational-lesson

./: .gitignore  CMakeLists.txt  Project10.sln  Project13.sln  README.md  build.bat
Assets/ConsoleProject/: file.txt
Assets/ProjectWin32/: file.txt
Assets/QtProject/: file.txt  fileSections.txt
Assets/Tests/: file.txt  file1.txt  file2.txt  file6.bindb
ConsoleApp/: AddOperationFactory.cpp  CMakeLists.txt  DataBaseOperations.cpp  DataBaseOperations.h  ObjectAddOperation.h  ObjectOperations.cpp  ObjectOpreations.h  OperationFactorys.h
Kernel/: CMakeLists.txt  Comparison.h  ContextIO.h  DataBase.h  DrawData.h  InputFiler.h  LineSegment2D.h  ObjectFactory.h  Objects.cpp  Output.cpp  OutputFiler.cpp  OutputFiler.h  TypeNamespace.h  Vector2D.cpp  Vector2D.h
Project10/: Factorys.h  Filer.cpp  Filer.h  Header.h  Input.cpp  Project10.vcxproj  Project10.vcxproj.filters  input.h  objectFactory.h  objects.cpp  objects.h  output.h
Project13/: CMakeLists.txt  Comparison.h  ContextIO.cpp  ContextIO.h  DataBase.cpp  DataBase.h  DrawData.cpp  DrawData.h  Drawer.cpp  Drawer.h  Factorys.h  FileType.h  GetDrawer.h  GetFileType.h  Input.cpp  Input.h  InputFiler.cpp  InputFiler.h  LineSegment2D.h  ObjectFactory.cpp  ObjectFactory.h  Objects.cpp  Objects.h  Output.cpp  Output.h  OutputFiler.cpp  OutputFiler.h  Project13.vcxproj  Project13.vcxproj.filters  TypeNamespace.h  Vector2D.cpp  Vector2D.h  Vectoriser.cpp  Vectoriser.h
Project13Console/: AddOperationFactory.cpp  AddOperationFactory.h  AddOperationWithObject.cpp  AddOperationWithObject.h  CMakeLists.txt  ContextIO.cpp  ContextIO.h  DataBaseOperations.cpp  GetDrawer.h  ObjectAddOperation.cpp  ObjectOperations.cpp  ObjectOpreations.h  OperationFactory.cpp  OperationFactory.h  OperationFactorys.h  OperationWithDataBase.cpp  OperationWithDataBase.h  OperationWithObject.cpp  OperationWithObject.h  Project13Console.vcxproj  Project13Console.vcxproj.filters  file2.txt  main.cpp
Project13Qt/: CMakeLists.txt  createcircledialog.cpp  createcircledialog.h  createcircledialog.ui  createcircleform.ui  createlinedialog.cpp  createlinedialog.h  createlinedialog.ui  createlineform.cpp  createlineform.h  createlineform.ui  createpolylinedialog.cpp  createpolylinedialog.h  createpolylinedialog.ui  createpolylineform.ui  createrectangledialog.cpp  createrectangledialog.h  createrectangledialog.ui  createrectangleform.ui  databaseview.h  drawclickscene.cpp  drawclickscene.h  enterfiledialog.cpp  enterfiledialog.h  enterfiledialog.ui  errordatadialog.cpp  errordatadialog.ui  errordialog.cpp  errorform.cpp  errorform.h  errorform.ui  file.txt  linecreator.cpp  linecreator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtApp/: CMakeLists.txt  InputStatus.h  createcircledialog.cpp  createcircleform.cpp  createcircleform.h  createcircleform.ui  createlinedialog.cpp  createlinedialog.ui  createlineform.cpp  createlineform.ui  createpolylinedialog.cpp  createpolylinedialog.ui  createpolylineform.cpp  createpolylineform.h  createrectangledialog.cpp  createrectangledialog.ui  createrectangleform.cpp  createrectangleform.h  createrectangleform.ui  databaseview.cpp  errordatadialog.h  errordialog.h  errordialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Win32App/: CMakeLists.txt  Renderer.cpp  Window.h
consoleProject/: consoleProject.vcxproj  file2.txt  main.cpp
project13Win32/: CMakeLists.txt  Renderer.cpp  Renderer.h  Window.h  main.cpp  project13Win32.vcxproj  project13Win32.vcxproj.filters
test/: Comparison.h  ComparisonTests.cpp  ComparisonTests.h  DataBaseTests.cpp  DataBaseTests.h  FilerTests.cpp  FilerTests.h  InputTests.cpp  InputTests.h  Myassert.h  ObjectsTests.cpp  ObjectsTests.h  Tests.cpp  Tests.h  WasException.h  file.bindb  file.txt  file19.txt  file2.txt  file4.txt  file6.bindb  main.cpp  test.vcxproj  test.vcxproj.filters
